home-k8s-cluster/workloads/k8s-prod/manifests/netbox/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbox
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  selector:
    matchLabels:
      app: netbox
  template:
    metadata:
      labels:
        app: netbox
    spec:
      containers:
        - name: netbox
          image: lscr.io/linuxserver/netbox:v3.6.6-ls163
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: /config
              name: netbox-volume
      volumes:
        - name: netbox-volume
          persistentVolumeClaim:
            claimName: netbox-pvc
