home-k8s-cluster/workloads/k8s-prod/manifests/netbox/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netbox-svc
spec:
  selector:
    app: netbox
  ports:
    - port: 8000
      targetPort: 8000
