home-k8s-cluster/workloads/k8s-prod/manifests/netbox/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netbox-ingress-https
  labels:
    name: netbox-ingress-https
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
        - netbox.home.maxanderson.tech
      secretName: netbox-tls
  rules:
    - host: netbox.home.maxanderson.tech
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: netbox-svc
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netbox-ingress-http
  labels:
    name: netbox-ingress-http
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: netbox-https-redirect@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  rules:
    - host: netbox.home.maxanderson.tech
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: netbox-svc
                port:
                  number: 8000
